@@ -1,117 +1,133 @@
 package org.tutorial.app.service.impl;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.tutorial.app.dto.TutorialDto;
+import org.tutorial.app.dto.request.TutorialRequest;
+import org.tutorial.app.dto.response.TutorialResponse;
+import org.tutorial.app.exceptions.NotFoundException;
+import org.tutorial.app.exceptions.TutorialAlreadyExistsException;
 import org.tutorial.app.model.Tutorial;
 import org.tutorial.app.repository.TutorialRepository;
+import org.tutorial.app.repository.impl.DemoRepository;
 import org.tutorial.app.service.TutorialService;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
 public class TutorialServiceImpl implements TutorialService {
 
     private final TutorialRepository tutorialRepository;
+    private final DemoRepository demoRepository;
 
+    public TutorialServiceImpl(TutorialRepository tutorialRepository, DemoRepository demoRepository) {
+        this.tutorialRepository = tutorialRepository;
+        this.demoRepository = demoRepository;
+    }
 
     @Override
-    public int create(TutorialDto tutorialDto) {
+    public String create(TutorialRequest request) {
+
+        Tutorial tutorial = tutorialRepository.findById(request.getId()).orElseThrow(null);
+        if (tutorial != null)
+            throw new TutorialAlreadyExistsException();
         log.info("Started to create a new tutorial.");
-        Tutorial book = convertToTutorial(tutorialDto);
-        int num = tutorialRepository.save(book);
+        Tutorial book = convertToTutorial(request);
+        Tutorial num = tutorialRepository.save(book);
         log.info("Created a new tutorial 'id={}' database.", num);
         System.out.println(book);
-        return num;
+        return "Tutorial created successfully";
     }
 
     @Override
-    public int update(TutorialDto tutorialDto, Long id) {
-        if (tutorialRepository.findById(id) == null) {
-            log.error("Tutorial does not found by 'id:{}'", id);
-            return 0;
-        }
+    public String update(TutorialRequest tutorialRequest, Long id) {
+        getById(id);
         log.info("Start to update tutorial by 'id {}' ", id);
-        Tutorial book = convertToTutorial(tutorialDto);
-        int n = tutorialRepository.update(book, id);
+        Tutorial book = convertToTutorial(tutorialRequest);
+//        demoRepository.update(book, id);
         log.info("Tutorial 'id={}' is updated", id);
-        return n;
+        return "Tutorial updated successfully";
     }
 
     @Override
-    public TutorialDto getById(Long id) {
-        log.info("Starting to search the tutorials in DB");
-        Tutorial tutorial = tutorialRepository.findById(id);
-        TutorialDto tutorialDto = convertToTutorialDto(tutorial);
-        if (tutorialDto == null)
-            log.warn("Tutorial 'id={}' isn't found", id);
-        log.info("Tutorial 'id={}' is found ", id);
-        return tutorialDto;
+    public TutorialResponse getById(Long id) {
+        log.info("Starting to search the tutorial in DB");
+        Tutorial tutorial = tutorialRepository.findById(id).orElseThrow(
+                () -> {
+                    log.warn("Tutorial is not found with id={} ", id);
+                    return new NotFoundException("No such tutorial with id=" + id);
+                });
+        TutorialResponse tutorialResponse = convertToTutorialResponse(tutorial);
+        log.info("Tutorial is found with id={} ", id);
+        return tutorialResponse;
     }
 
     @Override
-    public int removeById(Long id) {
+    public String removeById(Long id) {
+        log.info("Starting to search the tutorial in DB");
+        getById(id);
         log.warn("Deleting 'id={}' tutorial", id);
-        return tutorialRepository.deleteById(id);
+        tutorialRepository.deleteById(id);
+        return "Tutorial with id="+id+" deleted successfully";
     }
 
     @Override
-    public List<TutorialDto> getAll() {
-        log.info("Getting all tutorials...");
-        List<TutorialDto> tutorialDtos = new ArrayList<>();
-        for (Tutorial tutorial : tutorialRepository.findAll()) {
-            tutorialDtos.add(convertToTutorialDto(tutorial));
-        }
-        return tutorialDtos;
+    public List<TutorialResponse> getAll() {
+        log.info("Starting to get all tutorials...");
+        List<TutorialResponse> tutorialResponses = tutorialRepository.findAll().stream()
+                .map(this::convertToTutorialResponse).collect(Collectors.toList());
+        log.info("All tutorials were fetched");
+        return tutorialResponses;
     }
 
     @Override
-    public List<TutorialDto> getByPublished(boolean published) {
+    public List<TutorialResponse> getByPublished(boolean published) {
         log.info("Searching all tutorials 'published={}'", published);
-        List<TutorialDto> tutorialDtos =
-                tutorialRepository.findByPublished(published).stream().map(this::convertToTutorialDto).collect(Collectors.toList());
-        if (tutorialDtos.isEmpty()) log.error("Not found published 'status = {}' tutorials", published);
-        else log.info("There is no published 'status={}' tutorials", published);
-        return tutorialDtos;
+        List<TutorialResponse> tutorialResponses = tutorialRepository.findAll().stream().
+                filter(t -> t.getPublished() == published).map(this::convertToTutorialResponse).toList();
+        if (tutorialResponses.isEmpty()) {
+            log.error("Not found published 'status = {}' tutorials", published);
+            throw new NotFoundException("Not found published 'status=" + published + "' tutorials");
+        } else log.info("Published 'status={}' tutorials", published);
+        return tutorialResponses;
     }
 
     @Override
-    public List<TutorialDto> getByTitleContaining(String title) {
+    public List<TutorialResponse> getByTitleContaining(String title) {
         log.info("Searching tutorial title is '{}'", title);
-        List<Tutorial> tutorials = tutorialRepository.findByTitleContaining(title);
-        List<TutorialDto> tutorialDtos = tutorials.stream().map(this::convertToTutorialDto).collect(Collectors.toList());
-        if (tutorialDtos.isEmpty())
+        List<TutorialResponse> tutorialResponses = tutorialRepository.findAll().stream().
+                filter(t -> t.getTitle().equals(title)).map(this::convertToTutorialResponse).collect(Collectors.toList());
+        if (tutorialResponses.isEmpty()) {
             log.error("There is no '{}' titled tutorials!", title);
-        else log.info("Getting tutorial title is '{}'", title);
-        return tutorialDtos;
+            throw new NotFoundException("Not found published 'status " + title + "' tutorials");
+        } else log.info("Getting tutorial title is '{}'", title);
+        return tutorialResponses;
     }
 
     @Override
-    public int removeAll() {
+    public long removeAll() {
         log.warn("Deleting all tutorials");
-        int num = tutorialRepository.deleteAll();
-        if (num > 0) log.warn("All tutorials were deleted!");
-        return num;
+        long count = tutorialRepository.count();
+        tutorialRepository.deleteAll();
+        log.warn("All tutorials were deleted!");
+        return count;
     }
 
-    private TutorialDto convertToTutorialDto(Tutorial tutorial) {
-        return TutorialDto.builder()
+    private TutorialResponse convertToTutorialResponse(Tutorial tutorial) {
+        return TutorialResponse.builder()
                 .title(tutorial.getTitle())
                 .name(tutorial.getName())
                 .subject(tutorial.getSubject())
                 .published(tutorial.getPublished()).build();
     }
 
-    private Tutorial convertToTutorial(TutorialDto tutorialDto) {
+    private Tutorial convertToTutorial(TutorialRequest request) {
         return Tutorial.builder()
-                .title(tutorialDto.getTitle())
-                .name(tutorialDto.getName())
-                .subject(tutorialDto.getSubject())
-                .published(tutorialDto.getPublished()).build();
+                .title(request.getTitle())
+                .name(request.getName())
+                .subject(request.getSubject())
+                .published(request.getPublished()).build();
     }
+
 }
